class lado esquerdo e direito

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         <li>Gerenciamento de estado com Redux</li>
       </ul>
     </div>
-    <article id="artigo_aprendizado">
+    <article classe="lado_esquerdo" id="artigo_aprendizado">
       <h2>Sobre meu aprendizado</h2>
       <p>Nessas duas semanas que estou na Trybe, sinto que algo de estranho está acontecendo. Algo que talvez um físico quântico possa tentar explicar.
       O tempo aqui parece ter duas vertentes. Por um lado, sinto que o tempo passa muito rapido, pois quando vejo, o dia já acabou. Quando vejo, a semana ja passou. Temos a impressão de que o tempo voa, mas por outro lado, sinto que o aprendizado de uma semana, mas parece o aprendizado de um mês, ou dois meses de estudo.  </p>
     </article>
-    <aside id="secao">
+    <aside class="lado-direito" id="secao">
       <section>
         <h2>Primeiro desafio</h2>
         <p>Na semana inicial do curso meu Linux parou de funcionar. Tive que recorrer aos companheiros. Com esse desafio, aprendi a recuperar meu sistema operacional e descobri que posso contar com os amigos de turma 9.
