Passagem sobre seu aprendizado

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       de que obteremos a reação característica.
     </p>
   </article>
+  <aside>
+      Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
+    Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
+    sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura
+  </aside>
 
       <ol id="licoes_aprendidas">
         <li>Aparou</li>
