Ainda tentando agradar o codeclimate

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#top">Sobre mim</a></li>
         <li><a href="#licoes_aprendidas">Aprendizado</a></li>
         <li><a href="#rodape">Contato</a></li>
-    </ul>  
+    </ul>
 </nav>
 
 <main>
@@ -91,8 +91,11 @@
     <aside>
         <h3>O aprendizado já começou no processo seletivo</h3>
         <p>Participar do processo seletivo da <a href="https://www.betrybe.com/" target="_blank">Trybe</a> foi uma experiência única e de muito aprendizado desde o começo, uma vez que nunca havia tido contato com programação ou desenvolvimento web.</p>
-        <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JS para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
     </aside>
+
+    <section id="extra">
+        <p>Através do curso introdutório (disponibilizado após a inscrição), pude aprender o básico sobre JS para realizar 3 desafios práticos propostos e seguir para a próxima etapa do processo, o teste de raciocínio lógico.</p>
+    </section>
 
     <section id="contato">
         <h3><a href="https://www.linkedin.com/in/analuizamsalgado/" target="_blank"><img src="linkedin.png" alt="Logo do LinkedIn" width=35
