Englobei as listas dentro do article do texto principal

--- a/index.html
+++ b/index.html
@@ -18,31 +18,6 @@
         </header>
         <main>
             <img id="minha_foto" src="fotome.jpg" alt="Vinicius Palenske">
-            <article id="caixa">
-                <h2>Skills</h2>
-                <section class="lado-esquerdo">
-                    <ol id="licoes_aprendidas">
-                        <h3>Coisas que aprendi</h3>
-                        <li>SoftSkills</li>
-                        <li>Unix</li>
-                        <li>Bash</li>
-                        <li>Networking</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>HTML semântico</li>
-                    </ol>
-                </section>
-                <section class="lado-direito">
-                    <ul id="licoes_a_aprender">
-                        <h3>Coisas a aprender</h3>
-                        <li>Mais soft skills</li>
-                        <li>JavaScript</li>
-                        <li>react</li>
-                        <li>Python</li>
-                        <li>etc</li>
-                    </ul>
-                </section>
-            </article>
             <article class="artigo">
                 <h2>Processo de aprendizagem ativa</h2>
                 <section class="sessao" id="texto-principal">
@@ -60,6 +35,27 @@
                         uhsduiasdhsaudisadsa ioshdsuiadh 
                         suaidh asiudhsaiu dhsadsaduhs aduisahdui ahsdiuash asd iusadh saiudhsaduisa hduisa dhsauidh iuhsud ashd uish uihuhsushush sayguywayu sygdyusag yusgd ajs iojdsaioj dsiaojd iosajdahgdy gash aisjdih aus iajsiod jsiadj auisfhasj ijsaodka iojfiaojs
                     </p>
+                </section>
+                <section id="caixa">
+                    <h2>Skills</h2>
+                    <ol class="lado-esquerdo" id="licoes_aprendidas">
+                        <h3>Lições aprendidas</h3>
+                        <li>SoftSkills</li>
+                        <li>Unix</li>
+                        <li>Bash</li>
+                        <li>Networking</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>HTML semântico</li>
+                    </ol>
+                    <ul class="lado-direito" id="licoes_a_aprender">
+                        <h3>Lições a aprender</h3>
+                        <li>Mais soft skills</li>
+                        <li>JavaScript</li>
+                        <li>react</li>
+                        <li>Python</li>
+                        <li>etc</li>
+                    </ul>
                 </section>
                 <section class="sessao">
                     <h3>Tabela de aprendizado</h3><br>
