AChecker report: Congratulations! No known problems.

--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
                             <th>Difícil</th>
                         </tr>
                         <tr>
-                            <th> UNIX </th>
+                            <td> UNIX </td>
                             <td>X</td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <th> BASH </th>
+                            <td> BASH </td>
                             <td></td>
                             <td>X</td>
                             <td></td>
                         </tr>
                         <tr>
-                            <th> HTML </th>
+                            <td> HTML </td>
                             <td></td>
                             <td>X</td>
                             <td></td>
                         </tr>
                         <tr>
-                            <th> CSS </th>
+                            <td> CSS </td>
                             <td></td>
                             <td></td>
                             <td>X</td>
