listas colocadas em uma div e alocadas uma ao lado da outra

--- a/index.html
+++ b/index.html
@@ -36,27 +36,6 @@
                         suaidh asiudhsaiu dhsadsaduhs aduisahdui ahsdiuash asd iusadh saiudhsaduisa hduisa dhsauidh iuhsud ashd uish uihuhsushush sayguywayu sygdyusag yusgd ajs iojdsaioj dsiaojd iosajdahgdy gash aisjdih aus iajsiod jsiadj auisfhasj ijsaodka iojfiaojs
                     </p>
                 </section>
-                <section id="caixa">
-                    <h2>Skills</h2>
-                    <ol class="lado-esquerdo" id="licoes_aprendidas">
-                        <h3>Lições aprendidas</h3>
-                        <li>SoftSkills</li>
-                        <li>Unix</li>
-                        <li>Bash</li>
-                        <li>Networking</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>HTML semântico</li>
-                    </ol>
-                    <ul class="lado-direito" id="licoes_a_aprender">
-                        <h3>Lições a aprender</h3>
-                        <li>Mais soft skills</li>
-                        <li>JavaScript</li>
-                        <li>react</li>
-                        <li>Python</li>
-                        <li>etc</li>
-                    </ul>
-                </section>
                 <section class="sessao">
                     <h3>Tabela de aprendizado</h3><br>
                     <table id="dificuldade_skills">
@@ -92,6 +71,27 @@
                         </tr>
                     </table>
                 </section>
+                <div id="caixa">
+                    <h2>Skills</h2>
+                    <ol class="lado-esquerdo" id="licoes_aprendidas">
+                        <h3>Lições aprendidas</h3>
+                        <li>SoftSkills</li>
+                        <li>Unix</li>
+                        <li>Bash</li>
+                        <li>Networking</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>HTML semântico</li>
+                    </ol>
+                    <ul class="lado-direito" id="licoes_a_aprender">
+                        <h3>Lições a aprender</h3>
+                        <li>Mais soft skills</li>
+                        <li>JavaScript</li>
+                        <li>react</li>
+                        <li>Python</li>
+                        <li>etc</li>
+                    </ul>
+                </div>
             </article>
             <aside id="canto">
                 <h2>Momentos</h2>
