class lado-esquerdo corrigida2.0

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav>
         <ul>
           <li><a href="https://www.facebook.com/cristiano.lopes.315" target="_blank"><img id="img_face" src="./img/facebook.jpg" alt="FaceBook"></a></li>
-          <li><a href=""><img id="img_linkedin" src="./img/linkedin" alt="linkedin"></a></li>
-          <li><a href=""><img id="img_github" src="./img/github.jpeg" alt="github"></a></li>
+          <li><a href="https://www.linkedin.com/in/cristiano-lopes-duarte-0994821b7/"><img id="img_linkedin" src="./img/linkedin" alt="linkedin"></a></li>
+          <li><a href="https://github.com/tkdcris"><img id="img_github" src="./img/github.jpeg" alt="github"></a></li>
         </ul>
     </nav>
     <div id="lista_conhecimento">
@@ -47,7 +47,7 @@
         <li>Gerenciamento de estado com Redux</li>
       </ul>
     </div>
-    <article class="lado_esquerdo">
+    <article class="lado-esquerdo">
       <h2>Sobre meu aprendizado</h2>
       <p>Nessas duas semanas que estou na Trybe, sinto que algo de estranho está acontecendo. Algo que talvez um físico quântico possa tentar explicar.
       O tempo aqui parece ter duas vertentes. Por um lado, sinto que o tempo passa muito rapido, pois quando vejo, o dia já acabou. Quando vejo, a semana ja passou. Temos a impressão de que o tempo voa, mas por outro lado, sinto que o aprendizado de uma semana, mas parece o aprendizado de um mês, ou dois meses de estudo.  </p>
