Passagem sobre seu aprendizado Fix1

--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 </head>
 
 <body>
-
+  <nav>
   <header id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
     <a href="https://github.com/otacisos" target="_blank"> Github</a>
-
   </header>
-
   <img id="minha_foto" src="miau.jpg">
+
   <article>
     <p>
         Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
@@ -24,6 +23,7 @@
       de que obteremos a reação característica.
     </p>
   </article>
+
   <aside>
       Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
     Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
@@ -64,7 +64,7 @@
         <td>32</td>
       </tr>
     </table>
-
+  </nav>
   <footer id="rodape">Rodapé</footer>
 
 </body>
