Alteração da fonte e adição de um link externo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Lessons Learned</title>
-        <link rel="stylesheet" type="text/css" href="style.css"> 
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap">
     </head>
     <body>
         <header id=cabecalho>
@@ -52,17 +55,10 @@
                 <section class="sessao" id="texto-principal">
                     <h3>Dias na tribo</h3>
                     <br>
-                    <p>jdhsauidhsa suadhsuia hsuiadh suadhsuiadh 
-                        sauidhauuahd asduh asudh asuidhsaiu 
-                        hsadu hsuidhsauidhsaiudhsauidhui 
-                        uhsduiasdhsaudisadsa ioshdsuiadh 
-                        suaidh asiudhsaiu dhsadsaduhs aduisahdui ahsdiuash asd iusadh saiudhsaduisa hduisa dhsauidh iuhsud ashd uish uihuhsushush sayguywayu sygdyusag yusgd ajs iojdsaioj dsiaojd iosajdahgdy gash aisjdih aus iajsiod jsiadj auisfhasj ijsaodka iojfiaojssauidhauuahd asduh asudh asuidhsaiu 
-                        hsadu hsuidhsauidhsaiudhsauidhui 
-                        uhsduiasdhsaudisadsa ioshdsuiadh 
-                        suaidh asiudhsaiu dhsadsaduhs aduisahdui ahsdiuash asd iusadh saiudhsaduisa hduisa dhsauidh iuhsud ashd uish uihuhsushush sayguywayu sygdyusag yusgd ajs iojdsaioj dsiaojd iosajdahgdy gash aisjdih aus iajsiod jsiadj auisfhasj ijsaodka iojfiaojssauidhauuahd asduh asudh asuidhsaiu 
-                        hsadu hsuidhsauidhsaiudhsauidhui 
-                        uhsduiasdhsaudisadsa ioshdsuiadh 
-                        suaidh asiudhsaiu dhsadsaduhs aduisahdui ahsdiuash asd iusadh saiudhsaduisa hduisa dhsauidh iuhsud ashd uish uihuhsushush sayguywayu sygdyusag yusgd ajs iojdsaioj dsiaojd iosajdahgdy gash aisjdih aus iajsiod jsiadj auisfhasj ijsaodka iojfiaojs
+                    <p>O que é Lorem Ipsum?<br>
+                    Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                    Porque nós o usamos?<br>
+                    É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de "Conteúdo aqui, conteúdo aqui", fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por 'lorem ipsum' mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).
                     </p>
                 </section>
                 <section class="sessao">
@@ -105,13 +101,12 @@
                 <h2>Momentos</h2>
                 <section class="sessao">
                     <h3>O dia em que eu aprendi a usar o Github</h3><br>
-                    <p>ushdusa duihsad uish adsh au idhsa duihasd
-                        dsduh sads ads.
-                        sihuaidhuisahdsu uhsuidhsauid ds das dsad sdasjk idjai osdisoaj iosadj aodksoad.
+                    <p>De onde ele vem?<br>
+                    O trecho padrão original de Lorem Ipsum, usado desde o século XVI, está reproduzido abaixo para os interessados. Seções 1.10.32 e 1.10.33 de "de Finibus Bonorum et Malorum" de Cicero também foram reproduzidas abaixo em sua forma exata original, acompanhada das versões para o inglês da tradução feita por H. Rackham em 1914.
                     </p>
                 </section>
             </aside>
         </main>
-        <footer id="rodape"> <p>Direitos reservados a mim.<br> - 2020, um ano muito louco -</p></footer>
+        <footer id="rodape"> <p>Direitos reservados a mim.<br><a href="https://github.com/palenske" target="_blank"><p>GitHub</p></a>- 2020, um ano muito louco -</p></footer>
     </body>
 </html>
