Site mais acessível

--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
 </head>
 
 <body>
-  <nav>
+  
   <header id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
-    <a href="https://github.com/otacisos" target="_blank"> Github</a>
+
+    <nav >
+      <ul> 
+      <li><a href="https://github.com/otacisos" target="_blank"> Github</a></li>
+      </ul>
+    </nav>
   </header>
+
   <img id="minha_foto" src="miau.jpg">
 
   <article>
@@ -64,7 +70,6 @@
         <td>32</td>
       </tr>
     </table>
-  </nav>
   <footer id="rodape">Rodapé</footer>
 
 </body>
