--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <div id="capital">D</div> <div id="name">— <a href="#">Depoimentos</a></div>
             </div>
             <h2 id="titulo-texto">Trybe: coletividade é a condição para nos tirar do <em>loop</em></h2>
-            <div id="text-info">por <a href="#author">Renato Feitosa</a> • 24 de novembro de 2020 • <i class="fas fa-chart-line"></i> 2 visualizações • <i class="far fa-clock"></i> 3 minutos de leitura</div>
+            <div id="text-info">por <a href="#author">Renato Feitosa</a> • 24 de novembro de 2020 • <em class="fas fa-chart-line"></em> 2 visualizações • <em class="far fa-clock"></em> 3 minutos de leitura</div>
           </div>
         </div>
       </header>
@@ -95,25 +95,25 @@
             <tr>
               <td>
                 <a href="https://github.com/pythaqua/" target="_blank">
-                  <i class="fab fa-github-square"></i>
+                  <em class="fab fa-github-square"></em>
                   Github
                 </a>
               </td>
               <td>
                 <a href="https://www.linkedin.com/in/renato-pereira-feitosa" target="_blank">
-                  <i class="fab fa-linkedin"></i>
+                  <em class="fab fa-linkedin"></em>
                   LinkedIn
                 </a>
               </td>
               <td>
                 <a href="mailto:renatomo.pataqua@gmail.com" target="_blank">
-                  <i class="fas fa-envelope-square"></i>
+                  <em class="fas fa-envelope-square"></em>
                   E-mail
                 </a>
               </td>
               <td>
                 <a href="https://twitter.com/pythaqua" target="_blank">
-                  <i class="fab fa-twitter-square"></i>
+                  <em class="fab fa-twitter-square"></em>
                   Twitter
                 </a>
               </td>
