testing lorem ipsum texts to evaluation

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <article class="lado-esquerdo">
           <h3 class="article-title">A Experiência</h3>
           <p>
-            Ao tomar a decisão de, à época dos meus 37 anos, mudar de área e ingressar no desenvolvimento de software, o auto-aprendizado me parecia o caminho mais lógico. Apesar de colocar coisas em prática e vender <a href="https://pythaqua.github.io/#projetos" target="_new">alguns projetos</a>, atingi um estágio em que não conseguia mais evoluir. O sentimento de estagnação e a insegurança para tentar vagas no mercado - sendo "forasteiro" com a minha idade - me dominaram. Foi quando conheci a <a href="https://www.betrybe.com/">Trybe</a>, que descobri ser uma escola de <em>software</em> em que se ensina que <strong>o potencial humano e a coletividade têm tanto valor quanto conhecimentos sobre programação</strong>.
+            Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Cevadis im ampola pa arma uma pindureta. Delegadis gente finis, bibendum egestas augue arcu ut est. Viva Forevis aptent taciti sociosqu ad litora torquent.
+            Quem manda na minha terra sou euzis! Paisis, filhis, espiritis santis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Sapien in monti palavris qui num significa nadis i pareci latim.
           </p>
           <aside>
             <p>
-              Diante da frieza dos códigos e pressão dos prazos, a escola valoriza o que há de mais essencial ao mercado: as pessoas. <strong>A Trybe resgata o desenvolvimento humano como etapa essencial ao aprendizado de <em>software</em></strong>, oferecendo acesso a especialistas em psicologia e dedicando valiosas horas à prática de <em>soft skills</em> e do autoconhecimento.
+              Detraxit consequat et quo num tendi nada. Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio. Mé faiz elementum girarzis, nisi eros vermeio. Leite de capivaris, leite de mula manquis sem cabeça.
             </p>
           </aside>
         </article>
