--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       Lições aprendidas - Trybe!
     </h1>
   </header>
-  <img class="foto-perfil" src="/foto-perfil.jpeg" >
-  <article div="lista-materias">
+  <img class="minha_foto" src="/foto-perfil.jpeg" >
+  <article id="lista-materias">
     <h1>Lições aprendidas</h1>
     <div id="licoes_aprendidas">
       <ol>
@@ -44,7 +44,7 @@
       </ul>
     </div>
   </article>
-  <article>
+  <article div="aprendizado">
     <section>
       <p>
         My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
@@ -57,9 +57,27 @@
       </p>
       <p>
         My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
+        My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
       </p>
     </section>
   </article>
+  <table id="tabela">
+    <tr>
+      <th>Modulo</th>
+      <th>Projeto</th>
+      <th>Concluído</th>
+    </tr>
+    <tr>
+      <td>HTML - CSS</td>
+      <td>Site</td>
+      <td>70%</td>
+    </tr>
+    <tr>
+      <td>Eve</td>
+      <td>Jackson</td>
+      <td>94</td>
+    </tr>
+  </table>
 </body>
 <footer id="rodape">
   <nav><a target="_blank" href="https://www.linkedin.com/in/f%C3%A1bio-ven%C3%A2ncio-de-almeida-393522138/">Linkedin</a></nav>
