--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-  
+
   <header id="cabecalho">
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
 
     <nav >
-      <ul> 
+      <ul>
       <li><a href="https://github.com/otacisos" target="_blank"> Github</a></li>
       </ul>
     </nav>
@@ -31,12 +31,14 @@
   </article>
 
   <aside>
+    <p>
       Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
     Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
-    sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura
+    sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
+    </p>
   </aside>
 
-      <ol id="licoes_aprendidas">
+      <ol id="cores_li" id="licoes_aprendidas">
         <li>Aparou</li>
         <li>numa</li>
         <li>pipeta</li>
