licoes_aprendidas Fix1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
   </aside>
 
-      <ol id="cores_li" id="licoes_aprendidas">
+      <ol id="licoes_aprendidas">
         <li>Aparou</li>
         <li>numa</li>
         <li>pipeta</li>
@@ -50,6 +50,7 @@
         <li>esta</li>
         <li>pequena</li>
       </ol>
+
       <ul id="licoes_a_aprender">
         <li>quantidade</li>
         <li>sangue</li>
@@ -62,6 +63,7 @@
         <li>pura</li>
         <li>pois</li>
       </ul>
+
     <table id="tabela">
       <tr>
         <th>Nome:</th>
