--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
         <h3 class="article-title">A Experiência</h3>
         <article class="lado-esquerdo">
           <p>
-            Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Cevadis im ampola pa arma uma pindureta. Delegadis gente finis, bibendum egestas augue arcu ut est. Viva Forevis aptent taciti sociosqu ad litora torquent.
-
-            Quem manda na minha terra sou euzis! Paisis, filhis, espiritis santis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Sapien in monti palavris qui num significa nadis i pareci latim.
+            Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Cevadis im ampola pa arma uma pindureta. Delegadis gente finis, bibendum egestas augue arcu ut est. Viva Forevis aptent taciti sociosqu ad litora torquent.Quem manda na minha terra sou euzis! Paisis, filhis, espiritis santis. Praesent vel viverra nisi.
           </p>
         </article>
         <article class="lado-direito">
