testing if evaluation is reading the wrong article

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Cevadis im ampola pa arma uma pindureta. Delegadis gente finis, bibendum egestas augue arcu ut est. Viva Forevis aptent taciti sociosqu ad litora torquent.Quem manda na minha terra sou euzis! Paisis, filhis, espiritis santis. Praesent vel viverra nisi.
           </p>
         </article>
-        <article class="lado-direito">
+        <div class="lado-direito">
           <h3 class="article-title">Os Aprendizados</h3>
           <section>
             <h4>As dez lições que aprendi (até agora)</h4>
@@ -86,7 +86,7 @@
               <li>Noções de arquitetura de <em>software</em> para o planejamento e otimização da programação.</li>
             </ul>
           </section>
-        </article>
+        </div>
         <address class="lado-esquerdo" id="author">
           <h4 id="author-title">Sobre quem escreveu</h4>
           <img id="minha_foto" src="profile-img.jpg" alt="Foto de Renato Feitosa">
