--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Lições aprendidas - Trybe!
     </h1>
   </header>
-  <img class="minha_foto" src="/foto-perfil.jpeg" >
+  <img id="minha_foto" src="/foto-perfil.jpeg" >
   <article id="lista-materias">
     <h1>Lições aprendidas</h1>
     <div id="licoes_aprendidas">
@@ -45,21 +45,21 @@
     </div>
   </article>
   <article div="aprendizado">
-    <section>
       <p>
         My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
       </p>
-      <aside>
-        <p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
-      </aside>
+      <section>
+        <aside>
+          <p>The Epcot center is a theme park at World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+        </aside>
+      </section>
       <p>
-        The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.
+        The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events, international pavilions, award-winning fireworks and seasonal special events.
       </p>
       <p>
         My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
         My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!
       </p>
-    </section>
   </article>
   <table id="tabela">
     <tr>
@@ -70,12 +70,7 @@
     <tr>
       <td>HTML - CSS</td>
       <td>Site</td>
-      <td>70%</td>
-    </tr>
-    <tr>
-      <td>Eve</td>
-      <td>Jackson</td>
-      <td>94</td>
+      <td>1000%</td>
     </tr>
   </table>
 </body>
