--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
     <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
 
     <nav >
-      <ul>
-      <li><a href="https://github.com/otacisos" target="_blank"> Github</a></li>
-      </ul>
+      <ul><li><a href="https://github.com/otacisos" target="_blank"> Github</a></li> </ul>
     </nav>
   </header>
 
   <img id="minha_foto" src="miau.jpg">
 
+  <table id="tabela">
+    <tr>
+      <th>Nome:</th>
+      <td>Otaciso</td>
+    </tr>
+    <tr>
+      <th>Idade:</th>
+      <td>32</td>
+    </tr>
+  </table>
+
   <article>
+
     <p>
         Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
       Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
@@ -31,49 +41,45 @@
   </article>
 
   <aside>
-    <p>
-      Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
-    Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
-    sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
-    </p>
-  </aside>
+      <p>
+        Tomemos um pouco de sangue fresco – disse, enfiando um comprido estilete no dedo.
+      Aparou numa pipeta a gota de sangue que saiu. – Agora, adiciono esta pequena quantidade de
+      sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
+      </p>
 
-      <ol id="licoes_aprendidas">
-        <li>Aparou</li>
-        <li>numa</li>
-        <li>pipeta</li>
-        <li>gota</li>
-        <li>sangue</li>
-        <li>saiu</li>
-        <li>Agora</li>
-        <li>adiciono</li>
-        <li>esta</li>
-        <li>pequena</li>
-      </ol>
+      <section class="ladoAlado">
+        </aside>
+          <ol id="licoes_aprendidas">
+            <div class="artigo">
+              <li>Aparou</li>
+              <li>numa</li>
+              <li>pipeta</li>
+              <li>gota</li>
+              <li>sangue</li>
+              <li>saiu</li>
+              <li>Agora</li>
+              <li>adiciono</li>
+              <li>esta</li>
+              <li>pequena</li>
+            </div>
+          </ol>
 
-      <ul id="licoes_a_aprender">
-        <li>quantidade</li>
-        <li>sangue</li>
-        <li>litro</li>
-        <li>água</li>
-        <li>Perceberá</li>
-        <li>mistura</li>
-        <li>aparência</li>
-        <li>água</li>
-        <li>pura</li>
-        <li>pois</li>
-      </ul>
+        <ul id="licoes_a_aprender">
+          <div class="passagem">
+            <li>quantidade</li>
+            <li>sangue</li>
+            <li>litro</li>
+            <li>água</li>
+            <li>Perceberá</li>
+            <li>mistura</li>
+            <li>aparência</li>
+            <li>água</li>
+            <li>pura</li>
+            <li>pois</li>
+          </div>
+        </ul>
+      </section>
 
-    <table id="tabela">
-      <tr>
-        <th>Nome:</th>
-        <td>Otaciso</td>
-      </tr>
-      <tr>
-        <th>Idade:</th>
-        <td>32</td>
-      </tr>
-    </table>
   <footer id="rodape">Rodapé</footer>
 
 </body>
