Adiciona estilizacao de fontes, padding, table

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
   <section><img id="minha_foto" src="Luciano Lodi.jpg" alt="foto de Luciano">
 
     <article class="lado-esq"><h2>QUE BOM ESTAR AQUI</h2>
-      <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
+    <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
 
-      <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! #VamoQueVamo!</p> 
+    <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! <strong>#VAMOQUEVAMO!</strong></p> 
+    <table border="1px, solid, gray" align="center">
+      <tr>Loading</tr>
+      <td>###___________________________</td>
+    </table>
+  
     </article>
 
     <section class="lado-dir">
