--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       sangue a 1 litro de água. Perceberá que a mistura tem a aparência de água pura.
       </p>
     </aside>
-
+    
+    <section>
         <ol id="licoes_aprendidas">
           <div class="artigo">
             <li>Aparou</li>
