--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons Learned Trybe :rocket:</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 
 <header id="cabecalho">
@@ -19,10 +21,6 @@
     <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
 
     <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! <strong>#VAMOQUEVAMO!</strong></p> 
-    <table border="1px, solid, gray" align="center">
-      <tr>Loading</tr>
-      <td>###___________________________</td>
-    </table>
   
     </article>
 
@@ -53,6 +51,40 @@
         <li>Metodologias ágeis</li>
         <li>Sotaque mineiro</li>
       </ul>
+      <table align="center">
+        <tr></tr>
+        <td>#</td>
+        <td>#</td>
+        <td>#</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>L</td>
+        <td>O</td>
+        <td>A</td>
+        <td>D</td>
+        <td>I</td>
+        <td>N</td>
+        <td>G</td>
+        <td>_</td>
+        <td>_</td>       
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+        <td>_</td>
+      </table>
 
     </section>
 
