--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header id="cabecalho">
-    <h1 id="titulo">Meus projetos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
+    <h1 id="titulo">Meus códigos não possuem erros, apenas emitem comportamentos aleatórios.</h1>
 
     <nav >
       <ul><li><a href="https://github.com/otacisos" target="_blank"> Github</a></li> </ul>
