--- a/index.html
+++ b/index.html
@@ -8,54 +8,58 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned</h1>
+      <p id="titulo">Lessons Learned</p>
+      <h1></h1>
+        <nav>
+            <ul>
+              <li>Home</li>
+              <li>Contato</li>
+            </ul>
+        </nav>
     </header>
+    <main>
     <img id="minha_foto" src="Frederico Canoeira.JPG" alt="Foto de Frederico Canoeira">
-    <section>
-        <h4>Lições</h4>
-    <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Inteligencia emocional</li>
-        <li>Empatia</li>
-        <li>Inspect</li>
-        <li>Colaboração</li>
-        <li>Semantic HTML</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-    </ul>
-    </section>
-    <td>
-      <tr></tr>
-
-    </td>
-
+      <section>
+        <nav>
+          <h4>Lições</h4>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Inteligencia emocional</li>
+            <li>Empatia</li>
+            <li>Inspect</li>
+            <li>Colaboração</li>
+            <li>Semantic HTML</li>
+          </ol>
+          <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+          </ul>
+        </nav>
+      </section>
     <article>
         <h4>Artigo sobre o aprendizado</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque </p>
-
-    </article>
-
-    <aside class="artigo" >
+      <aside id="artigo" >
         <h4>Passagem sobre aprendizado</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro assumenda iste vel recusandae distinctio. Quos quam quidem natus atque veritatis adipisci illo cumque eveniet libero, fuga, asperiores consectetur sit? Atque.
         </p>
-    </aside>
+    </article>
+      </aside>
     <a href="https://www.linkedin.com/in/fredericocanoeira/" target="_blank">Linkedin</a>
     <a href="https://github.com/" target="_blank">GitHub</a>
+</main>
     <footer id="rodape">
     </footer>
     <p>Todos os direitos reservados, Frederico</p>
