--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="cabecalho">
-      <p id="titulo">Lessons Learned</p>
+      <h1 id="titulo">Lessons Learned</h1>
         <nav>
             <ul>
               <li>Home</li>
