atualizando section e estilo

--- a/index.html
+++ b/index.html
@@ -49,23 +49,19 @@
                 </ul>
             </div>
         </div>
-        <div class="container-text">
-            <section id="sobre-aprender">
-                <h3>Nossa rotina:</h3>
+        <div id="nossa-rotina">
+            <div class="rotina-trybe">
+                <h3 class="decoration">Nossa rotina:</h3>
                 <p>Aqui na TRYBE, o foco é cada vez aprender mais, sendo assim todos os dias temos assuntos diferenciados no esquenta.</p>
-                <p> todo o conteúdo no trybe/course, e depois ainda vamos para uma aula ao vivo sem igual com o especialista Gabriel Oliva. A aula do Oliva é simplesmente sem igual, uma aula descontraída dinâmica e cheia de interação com os alunos.</p> 
+                <p> todo o conteúdo no trybe/course, e depois ainda vamos para uma aula ao vivo sem igual com o especialista Gabriel Oliva. A aula do Oliva é simplesmente sem igual, uma aula descontraída dinâmica e cheia de interação com os alunos.</p>
+            </div>
+        </div>
+         <aside id="aside">
+             <section id="section-aside">
+                    <h3 id="titulo-aside" class="decoration">Sobre o que  aprendi:</h3>
+                    <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
              </section>
-        </div>
-        <div id="aside">
-            <section>
-                <aside class="aside-lateral">
-                    <h3>Sobre o que  aprendemos: </h3>
-                    <article>
-                        <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
-                    </article>
-                </aside>
-            </section>
-        </div>
+         </aside>
     </main>
     <footer id="rodape">
         <h3 class="title-footer">Para conhecer mais:</h3>
