--- a/index.html
+++ b/index.html
@@ -14,17 +14,12 @@
   <h2 id="titulo">LUCIANO LODI</h2>
 </header>
 
-<body>
-  <section><img id="minha_foto" src="Luciano Lodi.jpg" alt="foto de Luciano">
 
-    <article class="lado-esq"><h2>QUE BOM ESTAR AQUI</h2>
-    <p>Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.</p> 
 
-    <p>A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! <strong>#VAMOQUEVAMO!</strong></p> 
-  
-    </article>
+<body class="align-main">
+  <!--    <img id="minha_foto" src="Luciano Lodi.jpg" alt="foto de Luciano"> -->
 
-    <section class="lado-dir">
+    <section class="lado-esquerdo ">
 
       <ol id="licoes_aprendidas"> <h2>O QUE APRENDI:</h2>
         <li>Unix</li>
@@ -38,7 +33,9 @@
         <li>A Trybe é demais!</li>
         <li>A Turma 09 é sensacional! (Oliva que disse)</li>
       </ol>
+    </section>
 
+    <section class="meio">
       <ul id="licoes_a_aprender"><h2>O QUE AINDA QUERO (E VOU) APRENDER:</h2>
         <li>Agilidade para codar</li>
         <li>Codar de forma amigável e legível</li>
@@ -51,6 +48,7 @@
         <li>Metodologias ágeis</li>
         <li>Sotaque mineiro</li>
       </ul>
+      <br>
       <table align="center">
         <tr></tr>
         <td>#</td>
@@ -73,7 +71,7 @@
         <td>N</td>
         <td>G</td>
         <td>_</td>
-        <td>_</td>       
+        <td>_</td>
         <td>_</td>
         <td>_</td>
         <td>_</td>
@@ -85,10 +83,19 @@
         <td>_</td>
         <td>_</td>
       </table>
-
     </section>
-
-  </section>
+      
+    <section class="lado-direito">
+      <article><h2>QUE BOM ESTAR AQUI</h2>
+        <p>
+          Disseram que seria puxado, avisaram que ia exigir dedicação. Mas também falaram  que seria demais, que seríamos contaminados pela cultura da colaboração e suporte. Estamos na terceira semana, mas já aprendemos sobre Unix, Bash, Git, aprendemos como funciona a Internet e tudo que acontece nos bastidores entre a tecla enter e o resultado da pesquisa.
+        </p> 
+        <p>
+          A Trybe se mostra muito interessada nos seus alunos, o que me deixa muito feliz e motivado para trilhar esse caminho que está apenas começando! <strong>#VAMOQUEVAMO!</strong>
+        </p> 
+    
+      </article>
+    </section>
 
   <aside id="aside">
     <h3>O QUE HÁ ALÉM DO CONHECIMENTO TÉCNICO</h3>
@@ -96,9 +103,14 @@
       As imprescindíveis <span id="soft-skills">soft skills</span> também têm seu papel fundamental na formação dos Trybers, e tesouros como inteligência emocional, empatia e trabalho em equipe são levados a sério aqui.
     </p>
   </aside>
-</main>
+
 <footer id="rodape">
   <p>Projeto Lessons Learned - por <a href="https://lrlodi.github.io" target="_blank">Luciano Lodi</a></p>
+  <nav>
+    <img src="https://www.shareicon.net/data/2017/06/28/888041_logo_512x512.png" alt="icone Linkedin" width="40px">
+    <img src="https://image.flaticon.com/icons/png/512/25/25231.png" alt="icone GitHub" width="30px">
+    <img src="Melhorversão 2.0.png" alt="icone Melhor versao" width="40px">
+  </nav>
 </footer>
 </body>
 </html>
