adição de article ao novo modelo

--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
             </div>
         </div>
         <div id="nossa-rotina">
-            <div class="rotina-trybe">
+            <article class="rotina-trybe">
                 <h3 class="decoration">Nossa rotina:</h3>
                 <p>Aqui na TRYBE, o foco é cada vez aprender mais, sendo assim todos os dias temos assuntos diferenciados no esquenta.</p>
                 <p> todo o conteúdo no trybe/course, e depois ainda vamos para uma aula ao vivo sem igual com o especialista Gabriel Oliva. A aula do Oliva é simplesmente sem igual, uma aula descontraída dinâmica e cheia de interação com os alunos.</p>
-            </div>
+            </article>
         </div>
-         <aside id="aside">
-             <section id="section-aside">
-                    <h3 id="titulo-aside" class="decoration">Sobre o que  aprendi:</h3>
-                    <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
-             </section>
-         </aside>
+        <aside id="aside">
+            <section id="section-aside">
+                <h3 id="titulo-aside" class="decoration">Sobre o que  aprendi:</h3>
+                <p>Cada vez que acesso a plataforma de conteúdos (course) me surpreendo pois apesar de ser um conteúdo cheio de informação e matérias, que muitos de nós nunca vimos, tem uma organização que facilita o estudo e a absorção do conteúdo com vídeos, links de outras fontes.</p>
+            </section>
+        </aside>
     </main>
     <footer id="rodape">
         <h3 class="title-footer">Para conhecer mais:</h3>
